--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A full stack TODO application that uses a Nodejs backend, a SQLite database and JWT authentication",
   "main": "index.js",
   "scripts": {
-    "dev":"node --watch --env-file=.env ./src/server.js",
+    "dev": "node --watch --env-file=.env ./src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,7 +14,6 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "nodemon": "^3.1.10"
+    "jsonwebtoken": "^9.0.2"
   }
 }
